New Config Screen for both Evolution and Forge.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -8,6 +8,35 @@
   "itemGroup.evolution.stone_tools": "Stone Tools",
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
   "itemGroup.evolution.liquids": "Liquids and Containers",
+  "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
+  "evolution.config.allowed_values": "Allowed Values: %1$s",
+  "evolution.config.client_config": "Client Configurations",
+  "evolution.config.common_config": "Common Configurations",
+  "evolution.config.crazyMode": "Crazy Mode",
+  "evolution.config.crazyMode.comment": "I wouldn't use this if I were you... Might have some strange effects.",
+  "evolution.config.default": "Default: %1$s",
+  "evolution.config.label.client": "Client",
+  "evolution.config.label.common": "Common",
+  "evolution.config.range": "Range: %1$s",
+  "evolution.config.torchTime": "Torch Time",
+  "evolution.config.torchTime.comment": "Define the time in game hours the torch will be lit for. 0 will disable unliting.",
+  "forge.config.label.client": "Client",
+  "forge.configgui.allowEmissiveItems": "Allow Emissive Items",
+  "forge.configgui.allowEmissiveItems.comment": "Allow item rendering to detect emissive quads and draw them properly. This allows glowing blocks to look the same in item form, but incurs a very slight performance hit.",
+  "forge.configgui.alwaysSetupTerrainOffThread": "Force threaded chunk rendering",
+  "forge.configgui.alwaysSetupTerrainOffThread.comment": "May increase FPS significantly, but may also cause weird rendering lag. Not recommended for computers without a significant number of cores available.",
+  "forge.configgui.disableStairSlabCulling": "Disable Stair/Slab culling",
+  "forge.configgui.disableStairSlabCulling.comment": "Disable culling of hidden faces next to stairs and slabs. Causes extra rendering, but may fix some resource packs that exploit this vanilla mechanic.",
+  "forge.configgui.forgeCloudsEnabled": "Use Forge Cloud Rendering",
+  "forge.configgui.forgeCloudsEnabled.comment": "Enable uploading cloud geometry to the GPU for faster rendering.",
+  "forge.configgui.forgeLightPipelineEnabled": "Forge Light Pipeline Enabled",
+  "forge.configgui.forgeLightPipelineEnabled.comment": "Enable the forge block rendering pipeline - fixes the lighting of custom models.",
+  "forge.configgui.selectiveResourceReloadEnabled": "Enable Selective Resource Loading",
+  "forge.configgui.selectiveResourceReloadEnabled.comment": "When enabled, makes specific reload tasks such as language changing quicker to run.",
+  "forge.configgui.showloadwarnings": "Show Load Warnings",
+  "forge.configgui.showloadwarnings.comment": "When enabled, forge will show any warnings that occurred during loading",
+  "forge.configgui.zoomInMissingModelTextInGui": "Zoom in Missing model text in the GUI",
+  "forge.configgui.zoomInMissingModelTextInGui.comment": "Toggle off to make missing model text in the GUI fit inside the slot.",
   "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
   "command.evolution.date.error": "The date cannot be set before %1$s at %2$s",
   "command.evolution.date.success": "The date has been changed to %1$s",
@@ -25,7 +54,7 @@
   "effect.evolution.disoriented": "Disoriented",
   "effect.evolution.dizziness": "Dizziness",
   "effect.evolution.hydration": "Hydration",
-  "effect.evolution.hydration.desc": "Replenishes your thirst bar by 1 point per level, per tick.",
+  "effect.evolution.hydration.desc": "Replenishes your thirst bar by 1 point per level every tick.",
   "effect.evolution.thirst": "Thirst",
   "effect.evolution.thirst.desc": "You feel thirsty and consume water 5% quicker per level.",
   "effect.evolution.water_intoxication": "Water Intoxication",
@@ -62,7 +91,7 @@
   "effect.minecraft.regeneration.desc.4": "Regenerates your health by 1HP every 3 ticks.",
   "effect.minecraft.regeneration.desc.5": "Regenerates your health by 1HP every tick.",
   "effect.minecraft.resistance.desc": "Reduces all damage taken by 20% per level.",
-  "effect.minecraft.saturation.desc": "Reprenishes your hunger bar by 1 point per level, per tick.",
+  "effect.minecraft.saturation.desc": "Reprenishes your hunger bar by 1 point per level every tick.",
   "effect.minecraft.slow_falling.desc": "Decreases gravity acceleration on you by 8 m/s^2.",
   "effect.minecraft.slowness.desc": "Decreases movement speed by 15% per level.",
   "effect.minecraft.speed.desc": "Increases movement speed by 20% per level.",
@@ -142,7 +171,14 @@
   "evolution.advancements.general.knapping.title": "Knapping",
   "evolution.advancements.general.knapping.description": "Use a rock in a knapping block to shape it into something useful",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
+  "evolution.gui.add_value": "Add...",
+  "evolution.gui.edit": "Edit",
+  "evolution.gui.edit_value": "Edit Value",
   "evolution.gui.knapping": "Knapping",
+  "evolution.gui.remove": "Remove",
+  "evolution.gui.reset": "Reset",
+  "evolution.gui.restore_defaults": "Restore Defaults",
+  "evolution.gui.search": "Search...",
   "evolution.ingamemenu.modoptions": "Mod Options...",
   "evolution.options.controls.az": "A→Z",
   "evolution.options.controls.category": "Category",
