--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -3,11 +3,40 @@
   "generator.ev_default": "Mundo Evolution",
   "generator.ev_flat": "Superplano Evolution",
   "COMMENT_CREATIVE_TABS": "___________________________________________________________________________________________________CREATIVE TABS",
-  "itemGroup.evolution.eggs": "Ovos Geradores",
+  "itemGroup.evolution.eggs": "Ovos de Spawn",
   "itemGroup.evolution.misc": "Diversos",
   "itemGroup.evolution.stone_tools": "Ferramentas de Pedra",
   "itemGroup.evolution.trees_and_wood": "Árvores e Madeira",
   "itemGroup.evolution.liquids": "Líquidos e Recipientes",
+  "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
+  "evolution.config.allowed_values": "Valores Permitidos: %1$s",
+  "evolution.config.client_config": "Configurações do Client",
+  "evolution.config.common_config": "Configurações Gerais",
+  "evolution.config.crazyMode": "Modo Doido",
+  "evolution.config.crazyMode.comment": "Eu não usaria isso se fosse você... Pode ter alguns efeitos estranhos.",
+  "evolution.config.default": "Padrão: %1$s",
+  "evolution.config.label.client": "Client",
+  "evolution.config.label.common": "Geral",
+  "evolution.config.range": "Intervalo: %1$s",
+  "evolution.config.torchTime": "Tempo da Tocha",
+  "evolution.config.torchTime.comment": "Define o tempo pelo qual a tocha ficará acessa, em horas dentro do jogo. 0 vai desabilitar que elas apaguem.",
+  "forge.config.label.client": "Client",
+  "forge.configgui.allowEmissiveItems": "Permitir Itens Emissivos",
+  "forge.configgui.allowEmissiveItems.comment": "Permitir que a renderização de itens detecte quadriláteros emissivos e desenhe-os adequadamente. Isso permite que blocos brilhantes pareçam iguais em forma de item, mas causa um leve impacto de performance.",
+  "forge.configgui.alwaysSetupTerrainOffThread": "Forçar renderização de chunks em threads",
+  "forge.configgui.alwaysSetupTerrainOffThread.comment": "Pode aumentar o FPS significativamente, mas também pode causar lag de renderização. Não recomendado para computadores sem um número significante de núcleos de processamento disponíveis.",
+  "forge.configgui.disableStairSlabCulling": "Desabilitar o culling em Escadas/Lajes",
+  "forge.configgui.disableStairSlabCulling.comment": "Desabilita o culling de faces escondidas perto de escadas e lajes. Causa renderização extra, mas pode consertar alguns pacotes de recursos que exploitam essa mecânica do vanilla.",
+  "forge.configgui.forgeCloudsEnabled": "Usar a Renderização de Nuvens do Forge",
+  "forge.configgui.forgeCloudsEnabled.comment": "Habilitar o upload da geometria das nuvens para a GPU para renderização mais rápida.",
+  "forge.configgui.forgeLightPipelineEnabled": "Habilitar Forge Light Pipeline",
+  "forge.configgui.forgeLightPipelineEnabled.comment": "Habilita a renderização de blocos pipeline do Forge - corrige a iluminação em modelos customizados.",
+  "forge.configgui.selectiveResourceReloadEnabled": "Habilitar o Recarregamento Seletivo de Recursos",
+  "forge.configgui.selectiveResourceReloadEnabled.comment": "Quando habilitado, faz com que tarefas de recarregamento como mudar o idioma fiquem mais rápidas de se executar.",
+  "forge.configgui.showloadwarnings": "Mostrar Avisos ao Carregar",
+  "forge.configgui.showloadwarnings.comment": "Quando habilitado, o Forge mostrará qualquer aviso que ocorreu durante o carregamento.",
+  "forge.configgui.zoomInMissingModelTextInGui": "Focar no texto de modelos faltando na GUI",
+  "forge.configgui.zoomInMissingModelTextInGui.comment": "Desligue para fazer o texto de modelos faltando na GUI caber dentro do slot.",
   "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
   "command.evolution.date.error": "A data não pode ser definida antes de %1$s às %2$s",
   "command.evolution.date.success": "A data foi mudada para %1$s",
@@ -25,7 +54,7 @@
   "effect.evolution.disoriented": "Desorientação",
   "effect.evolution.dizziness": "Tontura",
   "effect.evolution.hydration": "Hidratação",
-  "effect.evolution.hydration.desc": "Enche sua barra de sede em 1 ponto por nível, por tick.",
+  "effect.evolution.hydration.desc": "Enche sua barra de sede em 1 ponto por nível a cada tick.",
   "effect.evolution.thirst": "Sede",
   "effect.evolution.thirst.desc": "Você se sente sedento e consome água 5% mais rápido por nível.",
   "effect.evolution.water_intoxication": "Intoxicação por Água",
@@ -62,7 +91,7 @@
   "effect.minecraft.regeneration.desc.4": "Regenera a sua vida em 1HP a cada 3 ticks.",
   "effect.minecraft.regeneration.desc.5": "Regenera a sua vida em 1HP a cada tick.",
   "effect.minecraft.resistance.desc": "Reduz todo o dano tomado em 20% por nível.",
-  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 ponto por nível, por tick.",
+  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 ponto por nível a cada tick.",
   "effect.minecraft.slow_falling.desc": "Diminui a aceleração da gravidade em você em 8 m/s^2.",
   "effect.minecraft.slowness.desc": "Diminui a velocidade de movimentação em 15% por nível.",
   "effect.minecraft.speed.desc": "Aumenta a velocidade de movimentação em 20% por nível.",
@@ -142,7 +171,14 @@
   "evolution.advancements.general.knapping.title": "Lascar",
   "evolution.advancements.general.knapping.description": "Use uma pedra num bloco de lascar para transformá-lo em algo útil",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
+  "evolution.gui.add_value": "Adicionar...",
+  "evolution.gui.edit": "Editar",
+  "evolution.gui.edit_value": "Editar Valor",
   "evolution.gui.knapping": "Lascando",
+  "evolution.gui.remove": "Remover",
+  "evolution.gui.reset": "Resetar",
+  "evolution.gui.restore_defaults": "Restaurar Padrão",
+  "evolution.gui.search": "Buscar...",
   "evolution.ingamemenu.modoptions": "Opções de Mods...",
   "evolution.options.controls.az": "A→Z",
   "evolution.options.controls.category": "Categoria",
@@ -776,8 +812,8 @@
   "item.evolution.shovel_head_schist": "Cabeça de Pá de Xisto",
   "item.evolution.shovel_head_shale": "Cabeça de Pá de Folhelho",
   "item.evolution.shovel_head_slate": "Cabeça de Pá de Ardósia",
-  "item.evolution.spawn_egg_cow": "Ovo Sumonador de Vaca",
-  "item.evolution.spawn_egg_shadowhound": "Ovo Sumonador de Cachorro das Sombras",
+  "item.evolution.spawn_egg_cow": "Ovo de Spawn de Vaca",
+  "item.evolution.spawn_egg_shadowhound": "Ovo de Spawn de Cachorro das Sombras",
   "item.evolution.torch_unlit": "Tocha Apagada",
   "COMMET_EASTER_EGGS": "________________________________________________________________________________________________________EASTER_EGGS",
   "evolution.easter.chert": "As estrelas eram lindas, não eram?",
