Added a new MemoryError Screen and Crash Screen for when the game runs out of memory and crashes.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -172,9 +172,20 @@
   "evolution.advancements.general.knapping.description": "Use a rock in a knapping block to shape it into something useful",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.add_value": "Add...",
+  "evolution.gui.crash": "Minecraft crashed!",
+  "evolution.gui.crash.conclusion": "Please, report the issue to help fix it. Despite the crash, you can keep playing.",
+  "evolution.gui.crash.report": "A report has been generated and can be found here:",
+  "evolution.gui.crash.reportSaveFailed": "[Error saving report, see log]",
+  "evolution.gui.crash.summary": "Minecraft ran into a problem and crashed.",
   "evolution.gui.edit": "Edit",
   "evolution.gui.edit_value": "Edit Value",
   "evolution.gui.knapping": "Knapping",
+  "evolution.gui.outOfMemory": "Out of Memory!",
+  "evolution.gui.outOfMemory.cause": "This could be caused by a bug in the game or by the Java Virtual Machine not being allocated enough memory.",
+  "evolution.gui.outOfMemory.info": "We've tried to free up enough memory to let you go back to the main menu and back to playing, but this may not have worked.",
+  "evolution.gui.outOfMemory.quit": "To prevent level corruption, the current game has quit.",
+  "evolution.gui.outOfMemory.restart": "Please restart the game if you see this message again.",
+  "evolution.gui.outOfMemory.summary": "Minecraft has run out of memory.",
   "evolution.gui.remove": "Remove",
   "evolution.gui.reset": "Reset",
   "evolution.gui.restore_defaults": "Restore Defaults",
