--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -172,9 +172,20 @@
   "evolution.advancements.general.knapping.description": "Use uma pedra num bloco de lascar para transformá-lo em algo útil",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.add_value": "Adicionar...",
+  "evolution.gui.crash": "Minecraft crashou!",
+  "evolution.gui.crash.conclusion": "Por favor, relate o problema para ajudar a consertá-lo. Apesar do crash, você pode continuar jogando.",
+  "evolution.gui.crash.report": "Uma report foi gerada e pode ser encontrada aqui:",
+  "evolution.gui.crash.reportSaveFailed": "[Erro ao salvar a report, veja o log]",
+  "evolution.gui.crash.summary": "O Minecraft encontrou um problema e crashou.",
   "evolution.gui.edit": "Editar",
   "evolution.gui.edit_value": "Editar Valor",
   "evolution.gui.knapping": "Lascando",
+  "evolution.gui.outOfMemory": "Sem Memória!",
+  "evolution.gui.outOfMemory.cause": "Isso pode ser causado por um bug no jogo ou pela Máquina Virtual do Java não ter memória suficiente alocada.",
+  "evolution.gui.outOfMemory.info": "Nós tentamos limpar memória o suficiente para te deixar voltar ao menu principal e voltar a jogar, mas isso pode não ter funcionado.",
+  "evolution.gui.outOfMemory.quit": "Para prevenir a corrupção do mundo, o jogo fechou.",
+  "evolution.gui.outOfMemory.restart": "Por favor reinicie o jogo se você ver essa mensagem novamente.",
+  "evolution.gui.outOfMemory.summary": "O Minecraft ficou sem memória.",
   "evolution.gui.remove": "Remover",
   "evolution.gui.reset": "Resetar",
   "evolution.gui.restore_defaults": "Restaurar Padrão",
